Skill gain calculation